# webcam-live

./: .gitignore  Cargo.toml  README.md  Trunk.toml  cliff.toml  deny.toml  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
src/: lib.rs  main.rs
